# polyglot-ai

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/: settings.local.json
.github/workflows/: docker.yml  release.yml
config/: client.example.toml  server.example.toml
crates/bridge/: Cargo.toml  README.md
crates/bridge/src/: dashboard.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: config.rs  connection.rs  main.rs
crates/client/src/sync/: mod.rs  watcher.rs
crates/client/src/tui/: mod.rs  views.rs
crates/common/: Cargo.toml
crates/common/src/: context.rs  crypto.rs  features.rs  lib.rs  models.rs  protocol.rs  storage.rs  updater.rs
crates/local/: Cargo.toml
crates/local/src/: config.rs  environment.rs  history.rs  main.rs  plugins.rs  sandbox.rs  tools.rs  tui.rs
crates/server/: Cargo.toml
crates/server/src/: config.rs  main.rs
crates/server/src/auth/: invite.rs  mod.rs  session.rs  users.rs
crates/server/src/protocol/: messages.rs  mod.rs
crates/server/src/sync/: mod.rs  ondemand.rs  realtime.rs
crates/server/src/tools/: claude.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  manager.rs  mod.rs  ollama.rs
crates/server/src/usage/: mod.rs  stats.rs
docker/: Dockerfile.client  Dockerfile.server  docker-compose.yml
scripts/: generate-certs.ps1  generate-certs.sh  install-tools.bat  install-tools.ps1  install-tools.sh  install.bat  install.ps1  install.sh  seamless-update.ps1  seamless-update.sh
