[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tugcan Topaloglu"]
license = "MIT"
repository = "https://github.com/tugcantopaloglu/selfhosted-ai-code-platform"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.48", features = ["full"] }

# QUIC protocol
quinn = "0.11"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2.2"
rcgen = { version = "0.14", features = ["pem", "x509-parser"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1.3"
toml = "0.8"

# CLI and TUI
clap = { version = "4.5", features = ["derive"] }
ratatui = "0.29"
crossterm = "0.29"

# Crypto
ring = "0.17"
age = "0.10"
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
base64 = "0.22"

# Database
rusqlite = { version = "0.37", features = ["bundled"] }

# File watching
notify = "8.2"

# Hashing
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Utilities
bytes = { version = "1.11", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
dirs = "6.0"
once_cell = "1.21"
parking_lot = "0.12"
futures = "0.3"
async-trait = "0.1"
portable-pty = "0.9"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
