[package]
name = "polyglot-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
mdns-sd = "0.13"
polyglot-common = { path = "../common" }
qrcode = "0.13"
quinn = { workspace = true }
rcgen = { workspace = true }
rmp-serde = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = "0.26"
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

http = "1.1"
tokio-tungstenite = "0.23"
