[package]
name = "polyglot-local"
version = "0.1.0"
edition = "2021"
description = "Polyglot-AI Local - Standalone AI CLI aggregator"
license = "MIT"
authors = ["Polyglot-AI Contributors"]

[[bin]]
name = "polyglot-local"
path = "src/main.rs"

[dependencies]
# Shared types
polyglot-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Directories
dirs = { workspace = true }
directories = "6.0"

# Path utilities
which = "7.0"

# HTTP client for updates
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
