[package]
name = "polyglot-local"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Polyglot-AI Local - Standalone AI CLI aggregator"

[[bin]]
name = "polyglot-local"
path = "src/main.rs"

[dependencies]
# Shared types
polyglot-common = { path = "../common" }

# Async runtime
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# TUI
ratatui = { workspace = true }
crossterm = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Time
chrono = { workspace = true }

# Concurrency
parking_lot = { workspace = true }

# Directories
dirs = { workspace = true }
directories = "6.0"

# Path utilities
which = "7.0"

# Unicode
unicode-width = "0.2"

# HTTP client for updates
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_System_Console", "Win32_Foundation"] }
